# superstar

./: .gitignore  DEVELOPMENT_PLAN.md  HANDOFF.md  README.md
backend/: .env.example  config.example.json  pyproject.toml  run.py
backend/app/: config.py
backend/app/agent/: gate.py  loop.py  pending.py  scheduler.py  subagent.py
backend/app/agent/tools/: __init__.py  fs.py  memory.py  rag.py  search.py  shell.py  subagent.py  workspace.py
backend/app/api/: main.py
backend/app/api/routes/: chat.py  kb.py  memory.py  session.py  settings.py
backend/app/models/: schemas.py
backend/app/services/: atomic_json.py  chunker.py  config_store.py  distill.py  llm.py  loaders.py  memory.py  rag_store.py  security.py  session_store.py
backend/scripts/: probe_reasoning.py  smoke_rag.py
backend/tests/: test_atomic_json.py  test_chat_routes.py  test_chunker.py  test_config_store.py  test_config_store_atomic.py  test_distill.py  test_gate.py  test_kb_routes.py  test_llm.py  test_loaders.py  test_loop.py  test_memory.py  test_memory_routes.py  test_pending.py  test_rag_store.py  test_scheduler.py  test_schemas.py  test_security.py  test_session_routes.py  test_session_store.py  test_settings_routes.py  test_subagent.py  test_tools.py  test_tools_memory.py  test_tools_subagent.py  test_workspace_tool.py
docs/plans/: 2026-07-02-p0-vertical-slice.md  2026-07-03-p1-sessions.md  2026-07-06-p2a-tools-readonly.md  2026-07-07-p2b-write-approval.md  (+9 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+27 files in other folders)
