[project]
name = "superstar-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# 让 pytest 从 backend/ 根目录解析 import(否则测试里 `import app` 会找不到,
# 因为 app 没作为已安装包,默认只有 tests/ 在搜索路径上)。"." 相对 rootdir=backend/。
pythonpath = ["."]
